# frankapy

./: .buildinfo  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  frankaarm.html  genindex.html  index.html  install.html  network.html  objects.inv  running.html  search.html  searchindex.js  setup.py  support.html
_modules/: index.html
_sources/: frankaarm.rst.txt  index.rst.txt  install.rst.txt  running.rst.txt
bash_scripts/: compile_proto.sh  make_catkin.sh  make_proto.sh  make_ros2_ws.sh  run_iam_robolib.sh  set_rosmaster.sh  start_control_pc (copy).sh  start_control_pc.sh  start_franka_gripper_on_control_pc.sh  start_franka_interface_on_control_pc.sh  start_franka_ros_interface_on_control_pc.sh  start_iam_robolib_on_control_pc.sh  start_ros_action_lib_on_control_pc.sh  start_rosmaster.sh
cfg/: april_tag_pick_place_cfg.yaml
data/: franka_pose0.pkl  franka_pose1.pkl  franka_traj.pkl  franka_traj0.pkl
docs/: buildDocs.sh  conf.py  frankaarm.html  frankaarm.rst  genindex.html  index.html  index.rst  install.html  install.rst  network.html  network.rst  objects.inv  py-modindex.html  running.html  running.rst  search.html  searchindex.js  support.html  support.rst
docs_src/: conf.py  index.rst
examples/: MPC.py  T_RSD415_franka.tf  T_RS_mount_delta.tf  april_tag_pick_place.py  dynamic_goto_object.py  dynamic_pick_object.py  example_movements.py  execute_joint_torques.py  go_to_joints_with_joint_impedances.py  grasp_joint_list1.npy  main.py  move_push.py  move_robot.py  pickup_starting_postion.tf  pickup_starting_postion2.tf  pre_grasp_joint_list1.npy  record_trajectory.py  run_cutting_RL.py  run_cutting_RL_normalCut.py  run_cutting_RL_pivChop.py  run_dynamic_cartesian_velocities.py  run_dynamic_joint_velocities.py  run_dynamic_joints.py  run_dynamic_pose.py  run_hfpc.py  run_hfpc_axes.py  run_hfpc_w_DMP_traject.py  run_pose_dmp.py  run_quaternion_pose_dmp.py  run_recorded_trajectory.py  saumya_ar_cfg.yaml  save_joints.py  shapes.py  test_RL_cutting_data_parsing.py  test_saved_trajectories.py  testinglqr_control.py  tree_interaction.py  visualize_data.py
frankapy/: __init__.py  exceptions.py  franka_arm.py  franka_arm_state_client.py  franka_constants.py  franka_interface_common_definitions.py  franka_interface_status_client.py  franka_robot_state_client.py  gripper_state_client.py  iam_robolib_common_definitions.py  proto_utils.py  ros_utils.py  sensor_data_bytes_publisher.py  sensor_utils.py  skill_list.py  utils.py
html/: install.html  network.html  running.html  searchindex.js  support.html
moveit_frankapy/src/devel_packages/manipulation/: CMakeLists.txt  package.xml
moveit_frankapy/src/devel_packages/manipulation/launch/: demo_frankapy.launch
moveit_frankapy/src/devel_packages/manipulation/src/: calibrate_frames.py  demo_moveit.py  robot_joint_converter.py
ros2_ws/src/franka_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/franka_msgs/action/: Grasp.action  Homing.action  Move.action
ros2_ws/src/franka_msgs/msg/: GraspEpsilon.msg
(+81 files in other folders)
