<?xml version="1.0"?>
<package format="2">
  <name>manipulation</name>
  <version>0.0.1</version>
  <description>
    A package which allows the use of moveit with frankapy.
  </description>

  <maintainer email="vib2810@gmail.com">Vibhakar Mohta</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>